--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin-recipes</title>
+    <link rel="stylesheet" href="/odin-recipes/css/style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link 
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" 
+    rel="stylesheet"> 
+</head> 
 
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Odin-recipes</title>
-    </head>
 
     <body>
-        <p><h1>Odins recipes</h1></p>
+        <p>Recipes</p>
+            <h1>Odins Recipes</h1>
 
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagne</a></li>
