--- a/index.html
+++ b/index.html
@@ -14,8 +14,35 @@
 
 
     <body>
-        <p>Recipes</p>
-            <h1>Odins Recipes</h1>
+
+        <header class="rubrik-farg text-center">
+            <div class="container">
+                 <p>Recipes</p>
+                 <h1>Odins Recipes</h1>
+            </div>
+        </header>
+
+        <section>
+            <div class="container">
+                <h2 class="text-center">Recipes</h2>
+                <div class="split">
+                   <div>
+                       <p>Recept1 och länk</p>
+                   </div>
+                   <div>
+                       <p>Recept 2 och länk</p>
+                   </div>
+                   <div>
+                       <p>Recept3 och länk</p>
+                   </div> 
+                </div>
+
+
+            </div>
+
+        </section>
+
+        
 
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagne</a></li>
