--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head> 
     
     <body>
-
+        <div class="intro">
                  <p>Welcome To</p>
                  <h1>Odins Recipes</h1>
             
@@ -21,7 +21,7 @@
              <h2>Recipes</h2>
                 <div class="split">
                    <div>
-                       <p> Vegetarian <a href="./recipes/lasagna.html">Lasagna</a></p>
+                       <p>Vegetarian<a href="./recipes/lasagna.html">Lasagna</a></p>
                    </div>
                    <div>
                        <p>Delicious <a href="./recipes/mjolkchokladfondant.html">Chocolate milk fondue</a></p>
@@ -31,5 +31,6 @@
                    </div> 
                 </div>
         </section>
+    </div>
     </body>
 </html>
