--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odins Recipe</title>
+    <title>Lasagna</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap"
@@ -14,6 +14,8 @@
 
 
 <body>
+
+   <div class="intro-lasa">
          <section class="la-ett">
             <h1>Lasagne</h1>
             <h3><strong>Description</strong></h3>
@@ -27,7 +29,7 @@
        <div class="bildlasa">
            <img class="bildlasa__image" src="../img/lasagne.jpg" alt="A picture of the finished dish of lasagna.">
        </div>       
-      
+      </div>
        
    <div class="la-tre">
        <h4>Ingredients</h4>
